--- a/src/app/user-update/dialog-body/dialog-body.component.html
+++ b/src/app/user-update/dialog-body/dialog-body.component.html
@@ -1,1 +1,51 @@
-<p>dialog-body works!</p>
+@if (changeDialog==false) {
+<form [formGroup]="updateForm" (ngSubmit)="update()">
+  <mat-card>
+    <mat-card-header >
+      <h4 >Update</h4>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-form-field>
+        <mat-label>Status</mat-label>
+        <mat-select
+          [(ngModel)]="statusValue"
+          name="status"
+          formControlName="status"
+          [(value)]="statusValue"
+          placeholder="{{ statusValue }}"
+        >
+          <mat-option value="false">False</mat-option>
+          <mat-option value="true">True</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Role</mat-label>
+        <mat-select
+          [(ngModel)]="roleValue"
+          name="role"
+          formControlName="role"
+          [(value)]="roleValue"
+          placeholder="{{ roleValue }}"
+        >
+          <mat-option value="admin">Admin</mat-option>
+          <mat-option value="user">User</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions class="container">
+      <button  type="submit" mat-raised-button  class="col">Update</button>
+      <button mat-raised-button  (click)="cancel()" color="red" class="col cancel">
+        Close
+      </button>
+    </mat-card-actions>
+  </mat-card>
+</form>
+}
+@else {
+ 
+    <h3 mat-dialog-title>Are ypu sure you want to delete this user</h3>
+    <div matDialogActions>
+    <button mat-button color="primary"  (click)="delete()">Yes</button>
+    <button mat-button color="primary"  (click)="cancel()">No</button>
+    </div>
+}
