--- a/src/app/user-update/user-update.component.html
+++ b/src/app/user-update/user-update.component.html
@@ -11,6 +11,10 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
         <td mat-cell *matCellDef="let element"> {{element.id}} </td>
       </ng-container>
+      <ng-container matColumnDef="updated_at">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Update </th>
+        <td mat-cell *matCellDef="let element"> {{ date(element.updated_at)}} </td>
+      </ng-container>
   
      
       <ng-container matColumnDef="name">
@@ -38,25 +42,15 @@
       <ng-container matColumnDef="tools">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Tools </th>
         <td mat-cell *matCellDef="let element"> 
-          <a class="edit" (click)="openDialog()"><mat-icon>edit</mat-icon> </a>
-          <a class="delete"><mat-icon>delete</mat-icon> </a>
+          <a class="edit" (click)="openEditDialog(element)" ><mat-icon>edit</mat-icon> </a>
+          <a class="delete" (click)="openDeleteDialog(element)"><mat-icon>delete</mat-icon> </a>
         </td>
       </ng-container> 
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
-      <!-- Row shown when there is no matching data. -->
-      <!-- <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-      </tr> -->
     </table>
   
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
   </div>
-  
-  <mat-dialog-actions>
-    <button mat-raised-button color="primary" (click)="openDialog()">
-      Contact us
-    </button>
-  </mat-dialog-actions>
+ 
