--- a/src/app/admin/create-hotel/create-hotel.component.html
+++ b/src/app/admin/create-hotel/create-hotel.component.html
@@ -1,1 +1,188 @@
-<p>create-hotel works!</p>
+<mat-stepper #stepper>
+  <mat-step [stepControl]="firstFromPhase" errorMessage="Invalid Value">
+    <form [formGroup]="firstFromPhase">
+      <div class="container">
+        <div class="row">
+          <div class="col-8">
+            <mat-card>
+              <mat-card-header class="text-align">
+                <h1 class="text-align">Create Hotel</h1>
+              </mat-card-header>
+              <mat-card-content>
+                <mat-form-field>
+                  <mat-label>Hotel Name</mat-label>
+                  <input type="text" matInput formControlName="hotelName"required />
+                </mat-form-field>
+                <mat-form-field>
+                  <mat-label>Give the Address of the hotel</mat-label>
+                  <input type="text" matInput formControlName="hotelAddress" />
+                </mat-form-field>
+
+                <mat-form-field>
+                  <mat-label>Give Description to the Hotel</mat-label>
+                  <textarea matInput formControlName="description" ></textarea>
+                </mat-form-field>
+                <!-- <mat-form-field>
+                  <mat-label>Add ur URL</mat-label>
+                  <input type="text" matInput formControlName="img_URL" />
+                </mat-form-field> -->
+              </mat-card-content>
+            </mat-card>
+          </div>
+
+          <div class="col-4">
+            <mat-card>
+              <mat-card-content>
+                <section>
+                  <mat-label>Services</mat-label>
+                  <mat-chip-listbox
+                    selectable="true"
+                    matInput
+                    formControlName="hotelServices"
+                    multiple="true"
+                  >
+                    <mat-chip-option
+                      *ngFor="let option of allFacilities"
+                      [value]="option.id"
+                    >
+                      <mat-icon>{{ option.nameIcon }}</mat-icon>
+                      {{ option.name }}
+                    </mat-chip-option>
+                  </mat-chip-listbox>
+                </section>
+              </mat-card-content>
+            </mat-card>
+          </div>
+        </div>
+      </div>
+    </form>
+    <div>
+      <button mat-button matStepperNext>Next</button>
+    </div>
+  </mat-step>
+  <mat-step label="Step 2" state="chat" [stepControl]="secondFromPhase" errorMessage="Invalid Value">
+    <form [formGroup]="secondFromPhase">
+      
+      <div class="container">
+        <div class="row">
+          <div class="col-8" >
+            <div class="map-wrap">
+              <div class="map" #map></div> 
+            </div>
+          </div>
+          <div class="col">
+          
+              <mat-select-country class="row"
+              appearance="fill"
+              matInput
+              formControlName="country"
+              label="Country"
+              (onCountrySelected)="onCountrySelected($event)">
+            </mat-select-country>
+      
+       
+            <mat-form-field class="row" >
+              <mat-label>State</mat-label>
+             <mat-select  matInput
+             [disabled]="state"
+             formControlName="state"
+             placeholder="State">
+          <mat-option 
+            
+            *ngFor="let option of stateData"
+            (onSelectionChange)="see(option)"
+            (onSelectionChange)="getMapData(option.name)"  
+            [value]="option.name">{{option.name}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field class="row" >
+        <mat-label>City</mat-label>
+       <mat-select  matInput
+       [disabled]="city"
+       formControlName="state"
+       placeholder="State">
+    <mat-option 
+      
+      *ngFor="let option of cityData"
+      (onSelectionChange)="getMapData(option.name)"  
+      [value]="option.name">{{option.name}}</mat-option>
+  </mat-select>
+</mat-form-field>
+  
+      
+            
+          
+         
+        </div>
+      </div>
+      </div>
+    </form>
+    <div style="right: auto;">
+      <button mat-button matStepperPrevious>Back</button>
+      <button mat-button matStepperNext>Next</button>
+    </div>
+  </mat-step>
+  <mat-step label="Step 3">
+    <form [formGroup]="thirdFromPhase">
+      <mat-form-field class="input_URL">
+        <mat-label>Enter the Url link of the hotel image</mat-label>
+        <input type="text" matInput formControlName="img_URL" />
+        <button matSuffix mat-icon-button (click)="saveURL()">
+          <mat-icon>add</mat-icon>
+        </button>
+      </mat-form-field>
+    </form>
+
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" matSort>
+    
+        <!-- ID Column -->
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="pic_URL">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> url </th>
+          <td mat-cell *matCellDef="let element"> 
+            <img [src]="element.pic_URL" ></td>
+        </ng-container> 
+    
+       
+        <ng-container matColumnDef="pic_Name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> pic Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.pic_Name}} </td>
+        </ng-container>
+  
+       <!--  <ng-container matColumnDef="tools">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Tools </th>
+          <td mat-cell *matCellDef="let element"> 
+            <a class="edit" (click)="openEditDialog(element)" ><mat-icon>edit</mat-icon> </a>
+            <a class="delete" (click)="openDeleteDialog(element)"><mat-icon>delete</mat-icon> </a>
+          </td>
+        </ng-container> --> 
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+    <mat-card-actions class="div-50">
+      <button type="submit"  (click)="create()" mat-raised-button color="primary">Create</button>
+    </mat-card-actions>
+  </mat-step>
+
+  <!-- 
+<mat-form-field >
+                <mat-label>Services</mat-label>
+                <mat-chip-listbox selectable="true"
+                matInput formControlName="hotelServices"
+                 multiple="true"(change)="example($event)">
+                    <mat-chip-option   
+                        
+                        *ngFor="let option of options" 
+                        [value]="option">
+                        {{option}}
+                </mat-chip-option>
+                </mat-chip-listbox>
+            </mat-form-field> -->
+</mat-stepper>
