--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -52,8 +52,8 @@
                     Mobile Phone
                 </mat-expansion-panel-header>
                 <mat-nav-list>
-                    <a mat-list-item routerLink="#">
-                        <mat-icon>apple</mat-icon><span>iOS</span>
+                    <a mat-list-item routerLink="/ceate-hotel">
+                        <mat-icon>apple</mat-icon><span>hotel</span>
                     </a>
                     <a mat-list-item routerLink="#">
                         <mat-icon>android</mat-icon><span>Android</span>
