--- a/src/app/admin/create-hotel/create-hotel.component.html
+++ b/src/app/admin/create-hotel/create-hotel.component.html
@@ -1,5 +1,5 @@
 <mat-stepper #stepper>
-  <mat-step [stepControl]="firstFromPhase" errorMessage="Invalid Value">
+  <mat-step [stepControl]="firstFromPhase" errorMessage="Invalid Value"  label="Step 1">
     <form [formGroup]="firstFromPhase">
       <div class="container">
         <div class="row">
@@ -11,7 +11,12 @@
               <mat-card-content>
                 <mat-form-field>
                   <mat-label>Hotel Name</mat-label>
-                  <input type="text" matInput formControlName="hotelName"required />
+                  <input
+                    type="text"
+                    matInput
+                    formControlName="hotelName"
+                    required
+                  />
                 </mat-form-field>
                 <mat-form-field>
                   <mat-label>Give the Address of the hotel</mat-label>
@@ -20,7 +25,7 @@
 
                 <mat-form-field>
                   <mat-label>Give Description to the Hotel</mat-label>
-                  <textarea matInput formControlName="description" ></textarea>
+                  <textarea matInput formControlName="description"></textarea>
                 </mat-form-field>
                 <!-- <mat-form-field>
                   <mat-label>Add ur URL</mat-label>
@@ -60,114 +65,123 @@
       <button mat-button matStepperNext>Next</button>
     </div>
   </mat-step>
-  <mat-step label="Step 2" state="chat" [stepControl]="secondFromPhase" errorMessage="Invalid Value">
+  <mat-step
+    label="Step 2"
+    state="chat"
+    [stepControl]="secondFromPhase"
+    errorMessage="Invalid Value"
+  >
     <form [formGroup]="secondFromPhase">
-      
       <div class="container">
         <div class="row">
-          <div class="col-8" >
+          <div class="col-8">
             <div class="map-wrap">
-              <div class="map" #map></div> 
+              <div class="map" #map></div>
             </div>
           </div>
           <div class="col">
-          
-              <mat-select-country class="row"
+            <mat-select-country
+              class="row"
               appearance="fill"
               matInput
               formControlName="country"
               label="Country"
-              (onCountrySelected)="onCountrySelected($event)">
+              (onCountrySelected)="onCountrySelected($event)"
+            >
             </mat-select-country>
-      
-       
-            <mat-form-field class="row" >
+
+            <mat-form-field class="row">
               <mat-label>State</mat-label>
-             <mat-select  matInput
-             [disabled]="state"
-             formControlName="state"
-             placeholder="State">
-          <mat-option 
-            
-            *ngFor="let option of stateData"
-            (onSelectionChange)="see(option)"
-            (onSelectionChange)="getMapData(option.name)"  
-            [value]="option.name">{{option.name}}</mat-option>
-        </mat-select>
-      </mat-form-field>
-      <mat-form-field class="row" >
-        <mat-label>City</mat-label>
-       <mat-select  matInput
-       [disabled]="city"
-       formControlName="state"
-       placeholder="State">
-    <mat-option 
-      
-      *ngFor="let option of cityData"
-      (onSelectionChange)="getMapData(option.name)"  
-      [value]="option.name">{{option.name}}</mat-option>
-  </mat-select>
-</mat-form-field>
-  
-      
-            
-          
-         
+              <mat-select
+                matInput
+                [disabled]="state"
+                formControlName="state"
+                placeholder="State"
+              >
+                <mat-option
+                  *ngFor="let option of stateData"
+                  (onSelectionChange)="see(option)"
+                  (onSelectionChange)="getMapData(option.name)"
+                  [value]="option.name"
+                  >{{ option.name }}</mat-option
+                >
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field class="row">
+              <mat-label>City</mat-label>
+              <mat-select
+                matInput
+                [disabled]="city"
+                formControlName="city"
+                placeholder="city"
+              >
+                <mat-option
+                  *ngFor="let option of cityData"
+                  (onSelectionChange)="getMapData(option.name)"
+                  [value]="option.name"
+                  >{{ option.name }}</mat-option
+                >
+              </mat-select>
+            </mat-form-field>
+          </div>
         </div>
       </div>
-      </div>
     </form>
-    <div style="right: auto;">
+    <div style="right: auto">
       <button mat-button matStepperPrevious>Back</button>
       <button mat-button matStepperNext>Next</button>
     </div>
   </mat-step>
   <mat-step label="Step 3">
-    <form [formGroup]="thirdFromPhase">
-      <mat-form-field class="input_URL">
-        <mat-label>Enter the Url link of the hotel image</mat-label>
-        <input type="text" matInput formControlName="img_URL" />
-        <button matSuffix mat-icon-button (click)="saveURL()">
-          <mat-icon>add</mat-icon>
-        </button>
-      </mat-form-field>
+    <form [formGroup]="thirdFromPhase" class="container">
+      <h6>Check In</h6>
+      <div class="row">
+        <mat-form-field class="col">
+          <mat-label>Give the time In from</mat-label>
+          <mat-select matInput formControlName="time_in_from" placeholder="Time From">
+            <mat-option *ngFor="let timeInFrom of timeSelected" [value]="timeInFrom">
+              {{timeInFrom}}
+              </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field class="col">
+          <mat-label>Give the time In until</mat-label>
+          <mat-select matInput formControlName="time_in_until" placeholder="Time Until">
+            <mat-option *ngFor="let timeInUntil of timeSelected" [value]="timeInUntil">
+              {{timeInUntil}}
+              </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <h6>Check Out</h6>
+      <div class="row">
+        <mat-form-field class="col">
+          <mat-label>Give the time Out from</mat-label>
+          <mat-select matInput formControlName="time_out_from" placeholder="Time From">
+            <mat-option *ngFor="let timeOutFrom of timeSelected" [value]="timeOutFrom">
+              {{timeOutFrom}}
+              </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field class="col">
+          <mat-label>Give the time out until</mat-label>
+          <mat-select matInput formControlName="time_out_until" placeholder="Time Until">
+            <mat-option *ngFor="let timeOutUntil of timeSelected" [value]="timeOutUntil">
+              {{timeOutUntil}}
+              </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
     </form>
-
-    <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" matSort>
-    
-        <!-- ID Column -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        </ng-container>
-    
-        <ng-container matColumnDef="pic_URL">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> url </th>
-          <td mat-cell *matCellDef="let element"> 
-            <img [src]="element.pic_URL" ></td>
-        </ng-container> 
-    
-       
-        <ng-container matColumnDef="pic_Name">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> pic Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.pic_Name}} </td>
-        </ng-container>
-  
-       <!--  <ng-container matColumnDef="tools">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Tools </th>
-          <td mat-cell *matCellDef="let element"> 
-            <a class="edit" (click)="openEditDialog(element)" ><mat-icon>edit</mat-icon> </a>
-            <a class="delete" (click)="openDeleteDialog(element)"><mat-icon>delete</mat-icon> </a>
-          </td>
-        </ng-container> --> 
-    
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </div>
     <mat-card-actions class="div-50">
-      <button type="submit"  (click)="create()" mat-raised-button color="primary">Create</button>
+      <button
+        type="submit"
+        (click)="create()"
+        mat-raised-button
+        color="primary"
+      >
+        Create
+      </button>
     </mat-card-actions>
   </mat-step>
 
