--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -52,11 +52,11 @@
                     Mobile Phone
                 </mat-expansion-panel-header>
                 <mat-nav-list>
-                    <a mat-list-item routerLink="/ceate-hotel">
+                    <a mat-list-item routerLink="/create-hotel">
                         <mat-icon>apple</mat-icon><span>hotel</span>
                     </a>
-                    <a mat-list-item routerLink="#">
-                        <mat-icon>android</mat-icon><span>Android</span>
+                    <a mat-list-item routerLink="/create-room">
+                        <mat-icon>android</mat-icon><span>room</span>
                     </a>
                 </mat-nav-list>
             </mat-expansion-panel>
