--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -52,6 +52,9 @@
                     Mobile Phone
                 </mat-expansion-panel-header>
                 <mat-nav-list>
+                    <a mat-list-item routerLink="/hotelDashboard">
+                        <span>hotel Dashboard</span>
+                    </a>
                     <a mat-list-item routerLink="/create-hotel">
                         <mat-icon>apple</mat-icon><span>hotel</span>
                     </a>
