--- a/src/app/admin/hotel-dashboard/hotel-dashboard.component.html
+++ b/src/app/admin/hotel-dashboard/hotel-dashboard.component.html
@@ -43,7 +43,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Tools </th>
         <td mat-cell *matCellDef="let element"> 
          <a class="edit" (click)="onProcessHotelPage(element.id,element.name)" ><mat-icon>edit</mat-icon> </a>
-         <a class="delete" (click)="delete(element.id)" ><mat-icon>delete</mat-icon> </a>
+         <a class="delete" (click)="openDeleteDialog(element)" ><mat-icon>delete</mat-icon> </a>
         </td> 
       </ng-container> 
   
